--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -8,12 +8,20 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&display=swap');
 
-
-body {
-   overflow-x: hidden   ;
-    margin: 0px;
-    font-family: "Open Sans", sans-serif;
+* {
+  box-sizing: border-box;
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+    font-family: "Open Sans", sans-serif;
+
+}
+
+
+
 
 
 button:hover{
